--- a/Templates/default/_static/css/articles.css
+++ b/Templates/default/_static/css/articles.css
@@ -24,6 +24,8 @@
         padding-bottom:7px;
         height:31px;
 
+        text-decoration:none;
+
     }
 
         #content article a.title .titleText {
