--- a/Templates/default/_static/css/layout.css
+++ b/Templates/default/_static/css/layout.css
@@ -117,7 +117,7 @@ body {
 }
 
     #footerWrapper footer .footerSide {
-        width:300px;
+        width:320px;
         margin:0 8px;
         color:#BBB;
         text-shadow:0px 0px 4px #777777;
@@ -129,6 +129,13 @@ body {
         text-decoration:none;
         font-weight:bold;
         color:#6fa460; /* green */
+    }
+
+
+    #footerWrapper footer .footerSide .debian,
+    #footerWrapper footer .footerSide .opera{
+        color:#d61d00; /* red */
+        text-shadow:1px 1px 10px #d61d00; /* red */
     }
 
     #footerWrapper footer .footerSide em{
